<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get a Way</string>
    <string name="slogan_name">we will help you to find your way!</string>
    <string name="powered_by">Powered by Shubham Phegade</string>


    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">"We will handle everything for you. As you have the app in your pocket then you don't have to worry about anything.  "</string>
    <string name="mcd_desc">"(MCD) is a fast food, limited service restaurant in over 100 countries"</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- Strings for Dashboards -->

    <!-- Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="eduaction">Education</string>
    <string name="airports">Airports</string>

    <!-- Titles and Description-->
    <string name="featured_location">All Featured Location</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town</string>
    <string name="most_viewed_location">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!-- Navigation bar   -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>

    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>

    <string name="restaurants2">RESTAURANTS</string>
    <string name="banks2">BANKS</string>
    <string name="education2">EDUCATION</string>
    <string name="shops2">SHOPS</string>

    <string name="share">SHARE</string>
    <string name="rate_us">RATE US</string>


    <!-- All Categories -->
    <string name="expand_all">EXPAND ALL</string>
    <string name="car_rent">Car Rent</string>
    <string name="restaurant">Restaurants</string>
    <string name="hospitals">Hospitals</string>
    <string name="shop">Shops</string>

    <!--   TODO: Retailer Pannel Strings  -->

    <!-- General Strings-->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using oline services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot Password</string>

    <!--  Login   -->
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>

    <!--  SignUP-->
    <string name="enter_full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="enter_phone_no">Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="account_created">Account\nCreated</string>
    <string name="account_created_success_message">your account has been created successfully!</string>>

    <!--    OTP Screen-->
    <string name="otp_code_text">co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+918552049130 </string>

    <!--    forget password-->
    <string name="forget_password_description">Provide your account\'s email for which you want to reset your password </string>

    <!--Make selection-->
    <string name="make_selection">MAKE SELECTION</string>
    <string name="make_selection_description">Select which contact detail should we use to reset your password? </string>
    <string name="sms_title">via sms:</string>
    <string name="mail_title">via mail:</string>
    <string name="new_credentials">NEW\nCREDENTIALS</string>
    <string name="new_credentials_detail">Your identity has been verified!\nSet your new password</string>

    <!--    Password Updated-->
    <string name="password_updated_text">Password\nUpdated</string>
    <string name="password_updated_success_message">your password has been updated!</string>
</resources>