<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignupSuccessScreen"
    android:orientation="vertical"
    android:background="@color/lightWhite"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/general_back_icon"
        android:tint="@color/black"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/success_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/account_created"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:layout_gravity="center"/>


        <ImageView
            android:id="@+id/success_message_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:src="@drawable/pw_updated_icon"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/success_message_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_extralight"
            android:gravity="center"
            android:text="@string/account_created_success_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/success_message_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>




</LinearLayout>