<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/lightWhite"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"
            android:transitionName="transition_back_arrow_btn"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingRight="6dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ds_digital_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="1/3"
                android:background="@drawable/circle_black_border"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="transition_slide_text" />


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:startIconDrawable="@drawable/full_name_icon"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/username_icon"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>



            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:onClick="callNextSignupScreen"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:background="@color/black"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:text="@string/login"
            android:fontFamily="@font/muli_extralight"
            android:textColor="@color/black"
            android:background="#00000000"
            android:transitionName="transition_login_btn"/>



    </LinearLayout>


</ScrollView>